# flora_parsing

./: .gitignore  Cargo.toml  README.md  file.txt  resultat.txt  tauri.conf.json
.github/workflows/: build.yml  release.yml
src/: complete_data.rs  data.rs  error.rs  main.rs  rows.rs
src/parser/: complete_data.rs  data.rs  mod.rs  mode.rs  rows.rs
ui/: index.html
